[package]
name = "rraw"
version = "1.0.0"
authors = ["Wyatt J Herkamp <wherkamp@kingtux.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wherkamp/rraw"
keywords = ["Reddit", "Async", "Tokio"]
categories = ["api-bindings"]
description = "An async Rust Reddit API Wrapper"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["sync"] }
async-trait = "0.1.53"
base64 = "0.13.0"
log = "0.4.17"
thiserror = "1.0.31"
reqwest = "0.11.10"


[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.18.2", features = ["full"] }
anyhow = "1.0.57"
env_logger = "0.9.0"
