[package]
name = "rraw"
version = "1.0.0"
authors = ["Wyatt J Herkamp <wherkamp@kingtux.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wherkamp/rraw"
keywords = ["Reddit", "Async", "Tokio"]
categories = ["api-bindings"]
description = "An async Rust Reddit API Wrapper"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync"], optional = true }
async-trait = "0.1"
base64 = "0.13"
log = "0.4.17"
thiserror = "1.0.32"
reqwest = "0.11.11"


[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1.0.59"
env_logger = "0.9.0"

[features]
default = ["shared_authentication"]
shared_authentication = ["tokio"]